fix: added .env files coming from test

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ REACT_APP_FACEBOOK_APP_ID=490466604947035
 REACT_APP_GOOGLE_KEY=AIzaSyAhohptKzKOOndCrj_6R-gIzYUfMQ3Gs-c
 REACT_APP_SOCKET_URL=https://blueclerk-node-api.deploy.blueclerk.com
 REACT_APP_CUSTOMER_SOCKET_URL=https://staging-customer.blueclerk.com
+REACT_APP_LAMBDA_URL=https://api-dev.blueclerk.com/api
