--- a/.env.test
+++ b/.env.test
@@ -8,3 +8,4 @@ REACT_APP_GOOGLE_KEY=AIzaSyAhohptKzKOOndCrj_6R-gIzYUfMQ3Gs-c
 REACT_APP_SOCKET_URL=https://api.test.blueclerk.com
 REACT_APP_CUSTOMER_SOCKET_URL=https://staging-customer.blueclerk.com
 REACT_APP_TELEMETRY_KEY=''
+REACT_APP_LAMBDA_URL=https://api-dev.blueclerk.com/api
