--- a/.env.production
+++ b/.env.production
@@ -8,3 +8,4 @@ REACT_APP_GOOGLE_KEY=AIzaSyAhohptKzKOOndCrj_6R-gIzYUfMQ3Gs-c
 REACT_APP_SOCKET_URL=https://api.blueclerk.com
 REACT_APP_CUSTOMER_SOCKET_URL=https://prod-customer-api.blueclerk.com
 REACT_APP_TELEMETRY_KEY=d9b960bc-cb9a-4b16-b2ac-f2835e70bb65:398c17cb-61ee-45d5-a9f3-264ca51d570c:1608c86
+REACT_APP_LAMBDA_URL=https://api-dev.blueclerk.com/api
