--- a/.env.staging
+++ b/.env.staging
@@ -8,3 +8,4 @@ REACT_APP_GOOGLE_KEY=AIzaSyAhohptKzKOOndCrj_6R-gIzYUfMQ3Gs-c
 REACT_APP_SOCKET_URL=https://api.staging.blueclerk.com
 REACT_APP_CUSTOMER_SOCKET_URL=https://staging-customer.blueclerk.com
 REACT_APP_TELEMETRY_KEY=d9b960bc-cb9a-4b16-b2ac-f2835e70bb65:579855a6-0794-4294-ac6a-456ed85ad093:1980d17
+REACT_APP_LAMBDA_URL=https://api-dev.blueclerk.com/api
